clang/test/BSC/Negative/Method/This/this_as_first_parameter/member_function_call/struct_member_function_call/struct_member_function_call.cbs
// RUN: %clang_cc1 -verify %s

struct Foo {
  int a;
};

T* owned safe_malloc<T>(T value);
void free_owned<T>(T* owned p);

int struct Foo::getA(This this) {
  return this.a;
}

int struct Foo::getA_2(const This this) {
  return this.a;
}

int struct Foo::getB(This* this) {
  return this->a;
}

int struct Foo::getB_2(const This* this) {
  return this->a;
}

int struct Foo::getC(This* borrow this) {
  return this->a;
}

int struct Foo::getC_2(const This* borrow this) {
  return this->a;
}

void struct Foo::getD(This* owned this) {
  free_owned<struct Foo>(this);
}

void test_This_actual_param() {
  struct Foo foo = {.a = 1};
  const struct Foo foo2 = {.a = 2};
  int a = foo.getA();  // expect ok, run ok
  int a2 = foo.getA_2();
  int a3 = foo2.getA(); // expected-error {{incompatible conversion from const type 'const struct Foo' to non-const type 'struct Foo' in member function call}}
  int a4 = foo2.getA_2();
  int b = foo.getB();  // expect ok, run ok
  int b2 = foo.getB_2(); //expect ok, run ok
  int b3 = foo2.getB(); // expected-error {{incompatible conversion from const type 'const struct Foo' to non-const type 'struct Foo *' in member function call}}
  int b4 = foo2.getB_2();
  int c = foo.getC();  // expect ok, run ok
  int c2 = foo.getC_2();  // expect ok, run ok
  foo.getD();  // expected-error {{incompatible conversion from non owned type 'struct Foo' to owned type 'struct Foo *owned' in member function call}}
}

void test_This_pointer_actual_param() {
  struct Foo foo = {.a = 1};
  struct Foo * foo_p = &foo;
  int a = foo_p->getA();  // expected-error {{incompatible conversion from pointer type 'struct Foo *' to non-pointer type 'struct Foo' in member function call}}
  int b = foo_p->getB();  // expect ok, run ok
  int b2 = foo_p->getB_2(); //expect ok, run ok
  int c = foo_p->getC();  // expect ok, run ok
  int c2 = foo_p->getC_2();  // expect ok, run ok
  foo_p->getD();  // expected-error {{incompatible conversion from non owned type 'struct Foo *' to owned type 'struct Foo *owned' in member function call}}
}

void test_const_This_pointer_actual_param() {
  struct Foo foo = {.a = 1};
  const struct Foo * c_foo_p = &foo;
  int a = c_foo_p->getA();  // expected-error {{incompatible conversion from pointer type 'const struct Foo *' to non-pointer type 'struct Foo' in member function call}}
  int b = c_foo_p->getB();  // expected-error {{incompatible conversion from const type 'const struct Foo *' to non-const type 'struct Foo *' in member function call}}
  int b2 = c_foo_p->getB_2(); //expect ok, run ok
  int c = c_foo_p->getC();  // expected-error {{incompatible conversion from const type 'const struct Foo *' to non-const type 'struct Foo *borrow' in member function call}}
  int c2 = c_foo_p->getC_2();  // expect ok, run ok
  c_foo_p->getD();  // expected-error {{incompatible conversion from non owned type 'const struct Foo *' to owned type 'struct Foo *owned' in member function call}}
}

void test_This_pointer_borrow_actual_param(void) {
  struct Foo foo = {.a = 1};
  struct Foo *borrow foo_mut = &mut foo;
  int a = foo_mut->getA();  // expected-error {{incompatible conversion from pointer type 'struct Foo *borrow' to non-pointer type 'struct Foo' in member function call}}
  int b = foo_mut->getB();  // expect ok, run ok
  int b2 = foo_mut->getB_2(); //expect ok, run ok
  int c = foo_mut->getC();  // expect ok, run ok
  int c2 = foo_mut->getC_2();  // expect ok, run ok
  foo_mut->getD();  // expected-error {{incompatible conversion from non owned type 'struct Foo *borrow' to owned type 'struct Foo *owned' in member function call}}
}

void test_const_This_pointer_borrow_actual_param(void) {
  struct Foo foo = {.a = 1};
  const struct Foo *borrow c_foo_mut = &const foo;
  int a = c_foo_mut->getA();  // expected-error {{incompatible conversion from pointer type 'const struct Foo *borrow' to non-pointer type 'struct Foo' in member function call}}
  int b = c_foo_mut->getB();  // expected-error {{incompatible conversion from const type 'const struct Foo *borrow' to non-const type 'struct Foo *' in member function call}}
  int b2 = c_foo_mut->getB_2(); //expect ok, run ok
  int c = c_foo_mut->getC();  // expected-error {{incompatible conversion from const type 'const struct Foo *borrow' to non-const type 'struct Foo *borrow' in member function call}}
  int c2 = c_foo_mut->getC_2();  // expect ok, run ok
  c_foo_mut->getD();  // expected-error {{incompatible conversion from non owned type 'const struct Foo *borrow' to owned type 'struct Foo *owned' in member function call}}
}

void test_This_pointer_owned_actual_param(void) {
  struct Foo foo = {.a = 1};
  struct Foo * owned foo_owned = safe_malloc<struct Foo>(foo);
  int a = foo_owned->getA();  // expected-error {{incompatible conversion from pointer type 'struct Foo *owned' to non-pointer type 'struct Foo' in member function call}}
  int b = foo_owned->getB();  // expect ok, run ok
  int b2 = foo_owned->getB_2(); //expect ok, run ok
  int c = foo_owned->getC();  // expect ok, run ok
  int c2 = foo_owned->getC_2();  // expect ok, run ok
  foo_owned->getD();  // expect ok, run ok
}
